# norfair-rs

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  PLAN.md  PLAN_TESTS.md  PROGRESS.md  README.md  THIRD_PARTY_LICENSES.md  pyproject.toml
.claude/: CLAUDE.md
.github/workflows/: ci.yml  release.yml
benches/: tracker_benchmarks.rs
examples/benchmark/: README.md  benchmark_go.go  benchmark_python.py  benchmark_rust.rs  generate_data.py  generate_fixtures.py  go.mod  go.sum  run_benchmarks.sh
python/norfair_rs/: __init__.py  _norfair_rs.pyi
python/tests/: conftest.py  test_compatibility.py  test_distances.py  test_fixtures.py  test_tracker.py
src/: detection.rs  drawing.rs  lib.rs  matching.rs  tracked_object.rs  tracker.rs  utils.rs  video.rs
src/camera_motion/: estimator.rs  mod.rs  transformations.rs
src/distances/: dispatch.rs  functions.rs  mod.rs  scalar.rs  scipy_wrapper.rs  traits.rs  vectorized.rs
src/filter/: dispatch.rs  filterpy.rs  mod.rs  no_filter.rs  optimized.rs  traits.rs
src/internal/: mod.rs
src/internal/filterpy/: kalman.rs  mod.rs
src/internal/motmetrics/: accumulator.rs  iou.rs  mod.rs
src/internal/numpy/: array.rs  mod.rs
src/internal/scipy/: distance.rs  mod.rs  optimize.rs
src/metrics/: accumulator.rs  detection_parser.rs  evaluation.rs  information_file.rs  mod.rs  predictions.rs
src/python/: detection.rs  distances.rs  filters.rs  mod.rs  tracked_object.rs  tracker.rs  transforms.rs
testdata/extended_metrics/: pred1.txt  pred2.txt
testdata/fixtures/: fixture_small.json
tests/: fixture_tests.rs  integration_tests.rs
tests/data/extended_metrics/: gt1.txt  gt3.txt  gt4.txt  pred3.txt  pred4.txt
tests/data/fixtures/: fixture_euclidean_small.json  fixture_fast_init.json  fixture_iou_occlusion.json  fixture_reid_euclidean.json  fixture_small.json
tests/python/: test_distances.py  test_tracker.py
