[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "norfair_rs"
version = "0.1.0"
description = "Fast object tracking library - Rust implementation of norfair"
readme = "README.md"
license = { text = "BSD-3-Clause" }
requires-python = ">=3.12"
keywords = ["tracking", "object-tracking", "kalman-filter", "computer-vision", "norfair"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "maturin>=1.4",
]
test-compat = [
    "norfair==2.3.0",
    "opencv-python>=4.0",
]

[project.urls]
Homepage = "https://github.com/nmichlo/norfair-rs"
Repository = "https://github.com/nmichlo/norfair-rs"

[tool.maturin]
features = ["python"]
python-source = "python"
module-name = "norfair_rs._norfair_rs"

[tool.pytest.ini_options]
testpaths = ["python/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Test files can have unused imports (for skipped tests) and style issues
"python/tests/*.py" = ["F821", "E721", "B007", "E711", "B905", "E501", "UP038"]
# Type stubs have long signatures
"*.pyi" = ["E501"]
# Example files - more lenient
"examples/**/*.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"

[dependency-groups]
dev = [
    "maturin>=1.10.2",
    "norfair>=2.3.0",
    "pytest>=9.0.1",
    "pre-commit>=4.0.0",
    "ruff>=0.8.0",
]
